--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,1 +1,22 @@
-// Начните писать стили здесь
+// Global
+
+@import "global/variables.scss";
+@import "global/global.scss";
+@import "global/fonts.scss";
+
+// Blocks
+
+@import "blocks/page.scss";
+@import "blocks/container.scss";
+@import "blocks/main-nav.scss";
+@import "blocks/main.scss";
+@import "blocks/promo.scss";
+@import "blocks/button.scss";
+@import "blocks/programs.scss";
+@import "blocks/program.scss";
+@import "blocks/features.scss";
+@import "blocks/example.scss";
+@import "blocks/result.scss";
+@import "blocks/slider.scss";
+@import "blocks/footer.scss";
+@import "blocks/contacts.scss";
