Внес правки в стилизацию главной страницы

--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -1,39 +1,23 @@
 .features__title {
   margin: 0 0 38px;
-
-  font-weight: 400;
-  font-size: 36px;
-  line-height: 40px;
-}
-
-.features__list {
-  margin: 0;
-  padding: 0;
-
-  list-style: none;
 }
 
 .features__item {
-  position: relative;
+  display: flex;
+  margin: 0 0 20px;
 
-  padding: 2px 0 4px 80px;
+  @include format-text;
 
-  line-height: 18px;
-  font-family: "Arial", sans-serif;
-  color: $grey-700;
-
-  &:not(:last-child) {
-    margin: 0 0 20px;
+  &:last-child {
+    margin: 0;
   }
 
   &::before {
     content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
 
-    width: 60px;
+    min-width: 60px;
     height: 60px;
+    margin: 0 20px 0 0;
 
     background-color: $green-400;
     background-repeat: no-repeat;
@@ -41,18 +25,18 @@
   }
 
   &--theme-healthy::before {
-    background-image: url(../../img/features-healthy.svg);
+    background-image: url("../../img/features-healthy.svg");
   }
 
   &--theme-powdery::before {
-    background-image: url(../../img/features-powdery.svg);
+    background-image: url("../../img/features-powdery.svg");
   }
 
   &--theme-food::before {
-    background-image: url(../../img/features-food.svg);
+    background-image: url("../../img/features-food.svg");
   }
 
   &--theme-thime::before {
-    background-image: url(../../img/features-thime.svg);
+    background-image: url("../../img/features-thime.svg");
   }
 }
