--- a/source/sass/blocks/result.scss
+++ b/source/sass/blocks/result.scss
@@ -7,6 +7,6 @@
 .result__definition {
   font-size: 12px;
   line-height: 12px;
-  font-family: "Arial", sans-serif;
+  font-family: $basic-font;
   color: $grey-700;
 }
