--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -1,21 +1,25 @@
-// Color
+// Colors
 
 $black-300: #222222;
 $black-350: #111111;
 $black-400: #000000;
 $green-400: #68b738;
-$green-500: #5EAA2F;
-$green-550: #5EAA2F;
-$grey-350: #E7E7E7;
+$green-500: #5eaa2f;
+$green-550: #5eaa2f;
+$grey-350: #e7e7e7;
 $grey-400: #f2f2f2;
-$grey-425: #D9D9D9;
+$grey-425: #d9d9d9;
 $grey-450: #eaeaea;
-$grey-475: #EBEBEB;
-$grey-500: #CDCDCD;
-$grey-525: #BABABA;
-$grey-550: #C4C4C4;
+$grey-475: #ebebeb;
+$grey-500: #cdcdcd;
+$grey-525: #bababa;
+$grey-550: #c4c4c4;
 $grey-600: #666666;
 $grey-700: #444444;
-$red-200: #FF8282;
+$red-200: #ff8282;
 $white-400: #ffffff;
 
+// Fonts
+
+$basic-font: "Arial", sans-serif;
+$custom-font: "Oswald", "Arial", sans-serif;
