--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -1,10 +1,20 @@
 .button {
-  display: inline-block;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
 
-  line-height: 18px;
-  color: $white-400;
+  font-family: inherit;
   text-transform: uppercase;
-  text-decoration: none;
 
-  background-color: $green-400;
+  background-color: transparent;
+  border: none;
+
+  &--primary {
+    font-size: 14px;
+    line-height: 18px;
+    color: $white-400;
+
+    background-color: $green-400;
+  }
 }
