--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -6,18 +6,12 @@
 
 .example__title {
   margin: 0 0 33px;
-
-  font-weight: 400;
-  font-size: 36px;
-  line-height: 40px;
 }
 
 .example__desc {
   margin: 0 0 25px;
 
-  line-height: 18px;
-  font-family: "Arial", sans-serif;
-  color: $grey-700;
+  @include format-text;
 }
 
 .example__list {
