--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -3,15 +3,19 @@
 @import "global/variables.scss";
 @import "global/global.scss";
 @import "global/fonts.scss";
+@import "global/mixins.scss";
 
 // Blocks
 
+@import "blocks/visually-hidden.scss";
+@import "blocks/list.scss";
+@import "blocks/title.scss";
+@import "blocks/button.scss";
 @import "blocks/page.scss";
 @import "blocks/container.scss";
 @import "blocks/main-nav.scss";
 @import "blocks/main.scss";
 @import "blocks/promo.scss";
-@import "blocks/button.scss";
 @import "blocks/programs.scss";
 @import "blocks/program.scss";
 @import "blocks/features.scss";
