--- a/source/sass/global/mixins.scss
+++ b/source/sass/global/mixins.scss
@@ -3,3 +3,9 @@
   font-family: $basic-font;
   color: $grey-700;
 }
+
+@mixin format-form-text {
+  font-size: 16px;
+  line-height: 18px;
+  color: $grey-700;
+}
