--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -16,7 +16,6 @@
 @import "blocks/main-nav.scss";
 @import "blocks/main.scss";
 @import "blocks/promo.scss";
-@import "blocks/programs.scss";
 @import "blocks/program.scss";
 @import "blocks/features.scss";
 @import "blocks/example.scss";
@@ -24,3 +23,4 @@
 @import "blocks/slider.scss";
 @import "blocks/footer.scss";
 @import "blocks/contacts.scss";
+@import "blocks/form.scss";
