Правки в стилизацию формы

--- a/source/sass/blocks/features.scss
+++ b/source/sass/blocks/features.scss
@@ -25,18 +25,18 @@
   }
 
   &--theme-healthy::before {
-    background-image: url("../../img/features-healthy.svg");
+    background-image: url("../img/features-healthy.svg");
   }
 
   &--theme-powdery::before {
-    background-image: url("../../img/features-powdery.svg");
+    background-image: url("../img/features-powdery.svg");
   }
 
   &--theme-food::before {
-    background-image: url("../../img/features-food.svg");
+    background-image: url("../img/features-food.svg");
   }
 
   &--theme-thime::before {
-    background-image: url("../../img/features-thime.svg");
+    background-image: url("../img/features-thime.svg");
   }
 }
