--- a/source/sass/blocks/program.scss
+++ b/source/sass/blocks/program.scss
@@ -32,7 +32,7 @@
       height: 53px;
       margin: 0 19px 0 0;
 
-      background-image: url("../../img/program-slim.svg");
+      background-image: url("../img/program-slim.svg");
     }
   }
 
@@ -42,7 +42,7 @@
       height: 50px;
       margin: 0 11px 0 0;
 
-      background-image: url("../../img/program-weight.svg");
+      background-image: url("../img/program-weight.svg");
     }
   }
 }
