--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -2,7 +2,7 @@
   text-align: center;
   color: $white-400;
 
-  background-image: linear-gradient(rgba($green-400, 0.85), rgba($green-400, 0.85)), url("../../img/background-cat-mobile.jpg");
+  background-image: linear-gradient(rgba($green-400, 0.85), rgba($green-400, 0.85)), url("../img/background-cat-mobile.jpg");
   background-repeat: no-repeat;
   background-position: top center;
   background-size: 320px 302px;
