--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -24,3 +24,9 @@
 @import "blocks/footer.scss";
 @import "blocks/contacts.scss";
 @import "blocks/form.scss";
+@import "blocks/main-products.scss";
+@import "blocks/main-product.scss";
+@import "blocks/all-product.scss";
+@import "blocks/additional-products.scss";
+@import "blocks/additional-product.scss";
+@import "blocks/gift.scss";
