--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -18,7 +18,7 @@
     background-color: $green-400;
   }
 
-  &--theme-smoke {
+  &--secondary {
     font-size: 16px;
     line-height: 20px;
     color: $grey-700;
