--- a/source/sass/blocks/container.scss
+++ b/source/sass/blocks/container.scss
@@ -2,4 +2,15 @@
   width: 320px;
   margin: 0 auto;
   padding: 0 20px;
+
+  @media (min-width: $tablet-width) {
+    width: 768px;
+    padding: 0 30px;
+    
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 1440px;
+    padding: 0 110px;
+  }
 }
