--- a/source/sass/blocks/example.scss
+++ b/source/sass/blocks/example.scss
@@ -2,6 +2,12 @@
   padding: 27px 0 25px;
 
   background-color: $grey-450;
+
+  @media (min-width: $tablet-width) {
+    padding: 0 0 67px;
+
+    background-color: transparent;
+  }
 }
 
 .example__title {
@@ -12,10 +18,54 @@
   margin: 0 0 25px;
 
   @include format-text;
+
+  @media (min-width: $tablet-width) {
+    margin: 0 0 53px;
+
+    @include format-text-tablet;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin: 0 0 70px;
+  }
+}
+
+.example__container-desktop {
+  @media (min-width: $desktop-width) {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 80px;
+  }
+}
+
+.example__container-tablet {
+  @media (min-width: $tablet-width) {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: center;
+
+    margin: 0 0 59px;
+  }
+
+  @media (min-width: $desktop-width) {
+    display: block;
+  }
 }
 
 .example__list {
-  margin: 0 0 25px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin: 0 0 15px;
+
+  @media (min-width: $tablet-width) {
+    margin: 0;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin: 0 0 55px;
+  }
 }
 
 .example__сosts {
