--- a/source/sass/blocks/program.scss
+++ b/source/sass/blocks/program.scss
@@ -2,22 +2,34 @@
   padding: 20px;
 
   background-color: $grey-400;
-}
 
-.programs__item {
-  margin: 0 0 20px;
-
-  &:last-child {
-    margin: 0;
+  @media (min-width: $tablet-width) {
+    padding: 52px;
   }
 }
 
 .program__title {
   display: flex;
   align-items: center;
-  margin: 0 0 22px;
+  margin: 0 0 29px;
 
   text-transform: uppercase;
+
+  @media (min-width: $tablet-width) {
+    margin: 0 0 24px;
+
+    &::before {
+      display: none;
+    }
+  }
+
+  @media (min-width: $desktop-width) {
+    margin: 0 0 73px;
+
+    &::before {
+      display: block;
+    }
+  }
 
   &::before {
     content: "";
@@ -54,6 +66,17 @@
   border-bottom: 1px solid $grey-425;
 
   @include format-text;
+
+  @media (min-width: $tablet-width) {
+    margin: 0 0 48px;
+    padding: 0;
+
+    color: $black-400;
+
+    border-bottom: none;
+
+    @include format-text-tablet;
+  }
 }
 
 .program__link {
@@ -87,5 +110,18 @@
     border-top-color: transparent;
     border-right-width: 0;
     border-bottom-color: transparent;
+  }
+
+  @media (min-width: $tablet-width) {
+    font-size: 20px;
+    line-height: 30px;
+
+     &::after {
+       top: 16px;
+     }
+
+     &::before {
+       top: 12px;
+     }
   }
 }
