--- a/source/sass/blocks/result.scss
+++ b/source/sass/blocks/result.scss
@@ -1,10 +1,18 @@
+.result {
+  padding: 14px 22px 0;
+  align-items: center;
+  text-align: center;
+}
+
 .result__term {
+  margin: 0 0 12px;
   font-size: 24px;
   line-height: 24px;
   text-transform: uppercase;
 }
 
 .result__definition {
+  margin: 0;
   font-size: 12px;
   line-height: 12px;
   font-family: $basic-font;
