--- a/source/sass/blocks/slider.scss
+++ b/source/sass/blocks/slider.scss
@@ -1,4 +1,78 @@
+.slider {
+  text-align: center;
+}
+
+.slider__list {
+  margin: 0 0 23px;
+}
+
+.slider__control {
+  display: inline-flex;
+  flex-wrap: wrap;
+  align-items: center;
+}
+
 .slider__button {
+  padding: 4px 10px;
+
   font-size: 16px;
   line-height: 20px;
+
+  @media (min-width: $tablet-width) {
+    font-size: 20px;
+    line-height: 30px;
+  }
+}
+
+.slider__range {
+  position: relative;
+
+  display: flex;
+  align-items: center;
+  min-width: 84px;
+  height: 14px;
+  padding: 3px 5px;
+
+  background-color: $white-400;
+  border: 1px solid $grey-500;
+  border-radius: 6px;
+
+  @media (min-width: $tablet-width) {
+    min-width: 428px;
+    height: 6px;
+
+    background-color: $grey-375;
+  }
+}
+
+.slider__bar {
+  width: 40%;
+  height: 6px;
+
+  background-color: $green-400;
+  border-radius: 6px;
+
+  @media (min-width: $tablet-width) {
+    width: 0;
+  }
+}
+
+.slider__toggle {
+  display: none;
+
+  @media (min-width: $tablet-width) {
+    position: absolute;
+    top: -12px;
+    right: 180px;
+
+    display: block;
+    width: 34px;
+    height: 34px;
+
+    background-color: $white-400;
+    border: 1px solid $grey-500;
+    border-radius: 50%;
+    box-shadow: inset 0 0 0 10px $white-400,
+      inset 0 0 0 16px $green-400;
+  }
 }
