--- a/source/sass/blocks/title.scss
+++ b/source/sass/blocks/title.scss
@@ -21,16 +21,31 @@
   &--medium {
     font-size: 24px;
     line-height: 37px;
+
+    @media (min-width: $tablet-width) {
+      font-size: 36px;
+      line-height: 36px;
+    }
   }
 
   &--large {
     font-size: 36px;
     line-height: 36px;
+
+    @media (min-width: $tablet-width) {
+      font-size: 60px;
+      line-height: 60px;
+    }
   }
 
   &--x-large {
     font-size: 36px;
     line-height: 40px;
+
+    @media (min-width: $tablet-width) {
+      font-size: 60px;
+      line-height: 60px;
+    }
   }
 
   &--theme-dark {
