--- a/source/sass/global/mixins.scss
+++ b/source/sass/global/mixins.scss
@@ -4,6 +4,11 @@
   color: $grey-700;
 }
 
+@mixin format-text-tablet {
+  font-size: 16px;
+  line-height: 24px;
+}
+
 @mixin format-form-text {
   font-size: 16px;
   color: $grey-700;
