--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -13,9 +13,11 @@
 @import "blocks/button.scss";
 @import "blocks/page.scss";
 @import "blocks/container.scss";
+@import "blocks/header.scss";
 @import "blocks/main-nav.scss";
 @import "blocks/main.scss";
 @import "blocks/promo.scss";
+@import "blocks/programs.scss";
 @import "blocks/program.scss";
 @import "blocks/features.scss";
 @import "blocks/example.scss";
