Поправил замечания по заданию адаптивная сетка главной страницы

--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -16,6 +16,10 @@
     color: $white-400;
 
     background-color: $green-400;
+
+    @media (min-width: $tablet-width) {
+      font-size: 20px;
+    }
   }
 
   &--secondary {
