--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -6,6 +6,7 @@ $black-400: #000000;
 $green-400: #68b738;
 $green-500: #5eaa2f;
 $green-550: #5eaa2f;
+$grey-325: #e6e6e6;
 $grey-350: #e7e7e7;
 $grey-375: #dcdcdc;
 $grey-400: #f2f2f2;
@@ -29,4 +30,5 @@ $custom-font: "Oswald", "Arial", sans-serif;
 
 $mobile-width-only: 767px;
 $tablet-width: 768px;
+$tablet-width-only: 1439px;
 $desktop-width: 1440px;
