--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -13,6 +13,7 @@
 @import "blocks/button.scss";
 @import "blocks/page.scss";
 @import "blocks/container.scss";
+@import "blocks/body.scss";
 @import "blocks/header.scss";
 @import "blocks/main-nav.scss";
 @import "blocks/main.scss";
@@ -25,6 +26,7 @@
 @import "blocks/slider.scss";
 @import "blocks/footer.scss";
 @import "blocks/contacts.scss";
+@import "blocks/social.scss";
 @import "blocks/form.scss";
 @import "blocks/main-products.scss";
 @import "blocks/main-product.scss";
