--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -1,12 +1,23 @@
 .contacts {
-  padding: 28px 20px 22px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 28px 0 22px;
+
+  @media (min-width: $tablet-width) {
+    align-items: center;
+    padding: 62px 41px 51px;
+  }
 
   @media (min-width: $desktop-width) {
-    position: absolute;
+    padding: 50px;
+    min-width: 570px;
+    background-color: $white-400;
   }
 }
 
 .contacts__title {
+  max-width: 140px;
   margin: 0;
 
   font-size: 16px;
@@ -21,6 +32,7 @@
 }
 
 .contacts__text {
+  max-width: 140px;
   margin: 0;
 
   line-height: 20px;
@@ -30,5 +42,6 @@
   @media (min-width: $tablet-width) {
     font-size: 16px;
     line-height: 20px;
+    text-align: right;
   }
 }
