--- a/source/sass/blocks/main.scss
+++ b/source/sass/blocks/main.scss
@@ -4,7 +4,13 @@
 }
 
 .main__promo {
-  margin: 0 0 22px;
+  @media (max-width: $mobile-width-only) {
+    margin: 0 0 22px;
+  }
+
+  @media (min-width: $desktop-width) {
+    margin: 0 0 82px;
+  }
 }
 
 .main__programs {
@@ -21,10 +27,6 @@
 
 .main__features {
   margin: 0 0 42px;
-
-  @media (min-width: $tablet-width) {
-    margin: 0 0 90px;
-  }
 
   @media (min-width: $desktop-width) {
     margin: 0 0 11px;
