--- a/source/sass/blocks/program.scss
+++ b/source/sass/blocks/program.scss
@@ -4,7 +4,52 @@
   background-color: $grey-400;
 
   @media (min-width: $tablet-width) {
+    padding: 77px 0 53px 52px;
+  }
+
+  @media (min-width: $desktop-width) {
     padding: 52px;
+  }
+}
+
+.program__content {
+  @media (min-width: $tablet-width) and (max-width: $tablet-width-only) {
+    position: relative;
+
+    &::after {
+      content: "";
+      position: absolute;
+      top: 0;
+
+      background-repeat: no-repeat;
+      background-size: contain;
+    }
+
+    &--slim {
+      padding: 0 262px 0 0;
+
+      &::after {
+        right: 62px;
+
+        width: 200px;
+        height: 211px;
+
+        background-image: url("../img/program-slim.svg");
+      }
+    }
+
+    &--weight {
+      padding: 0 296px 0 0;
+
+      &::after {
+        right: 34px;
+
+        width: 268px;
+        height: 200px;
+
+        background-image: url("../img/program-weight.svg");
+      }
+    }
   }
 }
 
@@ -87,6 +132,7 @@
   font-size: 16px;
   line-height: 16px;
   color: $black-400;
+  text-transform: uppercase;
 
   &::after {
     content: "";
@@ -116,12 +162,12 @@
     font-size: 20px;
     line-height: 30px;
 
-     &::after {
-       top: 16px;
-     }
+    &::after {
+      top: 16px;
+    }
 
-     &::before {
-       top: 12px;
-     }
+    &::before {
+      top: 12px;
+    }
   }
 }
