--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -1,19 +1,34 @@
 .promo {
   position: relative;
+
   text-align: center;
   color: $white-400;
 
   background-image: linear-gradient(rgba($green-400, 0.85), rgba($green-400, 0.85)), url("../img/background-cat-mobile.jpg");
   background-repeat: no-repeat;
   background-position: top center;
-  background-size: 320px 302px;
+  background-size: auto 302px;
 
   @media (min-width: $tablet-width) {
-    margin: 0 0 0 87px;
+    padding: 20px 0 0;
 
-    color: $black-400;
     text-align: left;
+    color: $black-400;
+
     background-image: none;
+  }
+}
+
+.promo__content {
+  @media (min-width: $tablet-width) {
+    margin: 0 0 0 87px;
+  }
+
+  @media (min-width: $desktop-width) {
+    position: relative;
+
+    margin: 0 0 0 80px;
+    padding: 83px 700px 131px 0;
   }
 }
 
@@ -32,7 +47,24 @@
   text-transform: uppercase;
 
   @media (min-width: $tablet-width) {
-    margin: 0 0 49px;
+    margin: 0 0 20px;
+
+    font-size: 20px;
+    line-height: 20px;
+  }
+}
+
+.promo__content-bottom {
+  @media (min-width: $tablet-width) {
+    position: relative;
+
+    padding: 29px 0 526px;
+  }
+
+  @media (min-width: $desktop-width) {
+    position: static;
+
+    padding: 0;
   }
 }
 
@@ -40,10 +72,22 @@
   width: 280px;
   height: 270px;
 
-  @media (min-width: $desktop-width) {
+  @media (min-width: $tablet-width) {
     position: absolute;
     top: 0;
-    right: 0;
+    left: 0;
+    z-index: -1;
+
+    width: 709px;
+    height: 609px;
+  }
+
+  @media (min-width: $desktop-width) {
+    top: 0;
+    left: 370px;
+
+    width: 552px;
+    height: 499px;
   }
 }
 
