--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -18,17 +18,19 @@
     align-items: center;
     padding: 11px 0 17px;
 
-    &::after,
-    &::before {
-      @include decor-pseudo-border;
-    }
+    &--underlined {
+      &::after,
+      &::before {
+        @include decor-pseudo-border;
+      }
 
-    &::after {
-      right: 0;
-    }
+      &::after {
+        right: 0;
+      }
 
-    &::before {
-      left: 0;
+      &::before {
+        left: 0;
+      }
     }
   }
 }
