--- a/source/sass/blocks/main.scss
+++ b/source/sass/blocks/main.scss
@@ -1,8 +1,3 @@
-.main--inner-pages {
-  padding: 27px 0 32px 0;
-  border-top: 1px solid $grey-425;
-}
-
 .main__promo {
   @media (max-width: $mobile-width-only) {
     margin: 0 0 22px;
@@ -35,6 +30,11 @@
 
 .main__title {
   margin: 0 0 37px;
+  padding: 27px 0 0;
+
+  @media (min-width: $tablet-width) {
+    margin: 0 0 54px;
+  }
 }
 
 .main__text {
@@ -42,4 +42,10 @@
 
   line-height: 18px;
   text-transform: uppercase;
+
+  @media (min-width: $tablet-width) {
+    font-size: 20px;
+    line-height: 30px;
+    margin: 0 0 46px;
+  }
 }
