--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -11,6 +11,9 @@
   border: none;
 
   &--primary {
+    width: 100%;
+    padding: 7px 25px;
+
     font-size: 16px;
     line-height: 20px;
     color: $white-400;
@@ -18,6 +21,7 @@
     background-color: $green-400;
 
     @media (min-width: $tablet-width) {
+      padding: 13px 30px;
       font-size: 20px;
     }
   }
