--- a/source/sass/blocks/footer.scss
+++ b/source/sass/blocks/footer.scss
@@ -1,5 +1,9 @@
 .footer {
   position: relative;
+
+  &--theme-smoke {
+    background-color: $grey-400;
+  }
 }
 
 .footer__contacts {
@@ -10,6 +14,9 @@
 }
 
 .footer__map {
+  width: 320px;
+  height: 362px;
+
   @media (min-width: $tablet-width) {
     min-width: 768px;
     height: 400px;
@@ -24,17 +31,15 @@
 }
 
 .footer__bottom {
-  background-color: $grey-400;
-  margin: 0 -20px 0 -20px;
-
   @media (min-width: $tablet-width) {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
-    padding: 25px;
-    margin: 0 -30px 0 -30px;
     min-height: 150px;
+    padding: 25 0;
+
+    background-color: $grey-400;
   }
 }
 
@@ -43,11 +48,25 @@
 
   text-align: center;
 
-  border-bottom: 1px solid $grey-425;
-
   @media (min-width: $tablet-width) {
     padding: 0;
-    border: none;
+  }
+
+  @media (max-width: $mobile-width-only) {
+    position: relative;
+
+    &::before,
+    &::after {
+      @include decor-pseudo-border;
+    }
+
+    &::before {
+      right: 50%;
+    }
+
+    &::after {
+      left: 50%;
+    }
   }
 }
 
@@ -60,10 +79,21 @@
 }
 
 .footer__social {
-  border-bottom: 1px solid $grey-425;
+  @media (max-width: $mobile-width-only) {
+    position: relative;
 
-  @media (min-width: $tablet-width) {
-    border: none;
+    &::before,
+    &::after {
+      @include decor-pseudo-border;
+    }
+
+    &::before {
+      right: 50%;
+    }
+
+    &::after {
+      left: 50%;
+    }
   }
 }
 
