--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -1,13 +1,3 @@
-.main-nav {
-  @media (max-width: $mobile-width-only) {
-    display: none;
-
-    &--opened {
-      display: block;
-    }
-  }
-}
-
 .main-nav__list {
   @media (max-width: $mobile-width-only) {
     text-align: center;
@@ -20,8 +10,6 @@
 }
 
 .main-nav__item {
-  padding: 0 0 10px;
-
   @media (max-width: $mobile-width-only) {
     position: relative;
 
@@ -32,22 +20,18 @@
       @include decor-pseudo-border;
     }
 
-    &::after {
-      right: 0;
-    }
-
     &::before {
-      left: 0;
+      right: 50%;
     }
 
-    &:last-child::after,
-    &:last-child::before {
-      border: none;
+    &::after {
+      left: 50%;
     }
   }
 
   @media (min-width: $tablet-width) {
     margin: 0 35px 0 0;
+    padding: 0 0 6px;
 
     &:last-child {
       margin: 0;
