--- a/source/sass/blocks/social.scss
+++ b/source/sass/blocks/social.scss
@@ -16,4 +16,12 @@
   &:last-child {
     margin: 0;
   }
+
+  @media (min-width: $tablet-width) {
+    margin: 0 28px 0 0;
+
+    &:last-child {
+      margin: 0;
+    }
+  }
 }
