--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -28,6 +28,7 @@
 @import "blocks/contacts.scss";
 @import "blocks/social.scss";
 @import "blocks/form.scss";
+@import "blocks/form-top.scss";
 @import "blocks/main-products.scss";
 @import "blocks/main-product.scss";
 @import "blocks/all-product.scss";
