Адаптивная сетка для страницы каталога

--- a/source/sass/blocks/main-product.scss
+++ b/source/sass/blocks/main-product.scss
@@ -1,7 +1,41 @@
+.main-product {
+  display: flex;
+  flex-wrap: wrap;
+
+
+  @media (min-width: $tablet-width) {
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+
+    text-align: center;
+
+    background-image: linear-gradient(to top, $grey-400 430px, transparent 430px, transparent 100%);
+  }
+}
+
+.main-product__info-content {
+  width: 50%;
+  padding: 0 0 9px;
+
+  @media (min-width: $tablet-width) {
+    width: 100%;
+    margin: 0 0 33px;
+  }
+}
+
 .main-product__title {
   margin: 0 0 18px;
 
   text-transform: uppercase;
+
+  @media (min-width: $tablet-width) {
+    margin: 0 0 21px;
+
+    br {
+      display: none;
+    }
+  }
 }
 
 .main-product__link-title {
@@ -9,12 +43,34 @@
 }
 
 .main-product__desc {
-  font-size: 12px;
-  line-height: 16px;
+  width: 100%;
+}
 
-  @include format-product-desc;
+.main-product__link-img {
+  order: -1;
+  align-self: center;
+  width: 50%;
+
+  text-align: center;
+
+  @media (min-width: $tablet-width) {
+    margin: 0 0 34px;
+  }
+}
+
+.main-product__img {
+  vertical-align: bottom;
+
+  @media (min-width: $tablet-width) {
+    width: 168px;
+    height: 206px;
+  }
 }
 
 .main-product__button {
-  padding: 6px 109px;
+  margin: 13px 0 0;
+
+  @media (min-width: $tablet-width) {
+    margin: 0;
+  }
 }
