--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -16,6 +16,7 @@ $grey-475: #ebebeb;
 $grey-500: #cdcdcd;
 $grey-525: #bababa;
 $grey-550: #c4c4c4;
+$grey-575: #d3d3d3;
 $grey-600: #666666;
 $grey-700: #444444;
 $red-200: #ff8282;
