--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -34,4 +34,5 @@
 @import "blocks/all-product.scss";
 @import "blocks/additional-products.scss";
 @import "blocks/additional-product.scss";
+@import "blocks/product-desc.scss";
 @import "blocks/gift.scss";
