--- a/source/sass/blocks/additional-product.scss
+++ b/source/sass/blocks/additional-product.scss
@@ -1,15 +1,48 @@
+.additional-product__info-content {
+  @media (min-width: $tablet-width) {
+    display: flex;
+    justify-content: space-between;
+    margin: 0 0 26px;
+  }
+
+  @media (min-width: $desktop-width) {
+    min-width: 610px;
+    margin: 0 40px 0 0;
+  }
+}
+
+
 .additional-product__title {
   margin: 0 0 13px;
+
+  text-transform: uppercase;
+
+  @media (min-width: $tablet-width) {
+    margin: 0;
+  }
 }
 
 .additional-product__list {
+  display: flex;
+  justify-content: space-between;
   margin: 0 0 15px;
+
   font-size: 14px;
   line-height: 14px;
 
   @include format-product-desc;
+
+  @media (min-width: $tablet-width) {
+    font-size: 16px;
+    line-height: 20px;
+    margin: 0;
+  }
 }
 
-.additional-product__button {
-  padding: 6px 109px;
+.additional-product__definition {
+  margin: 0;
+
+  @media (min-width: $tablet-width) {
+    margin: 0 0 0 51px;
+  }
 }
