--- a/source/sass/blocks/all-product.scss
+++ b/source/sass/blocks/all-product.scss
@@ -1,7 +1,47 @@
+.all-product {
+  text-align: center;
+
+  @media (min-width: $tablet-width) {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-self: flex-end;
+    min-height: 429px;
+
+    border: 2px solid $grey-400;
+  }
+}
+
 .all-product__title {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   margin: 0 0 8px;
 
   text-transform: uppercase;
+
+  &::before {
+    content: "";
+
+    display: block;
+    width: 30px;
+    height: 30px;
+    margin: 0 0 23px;
+
+    background-image: url("../img/plus.svg");
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    @media (min-width: $tablet-width) {
+      width: 60px;
+      height: 60px;
+      margin: 0 0 49px;
+    }
+  }
+
+  @media (min-width: $tablet-width) {
+    margin: 0 0 23px;
+  }
 }
 
 .all-product__text {
@@ -11,8 +51,11 @@
   line-height: 16px;
 
   @include format-product-desc;
-}
 
-.all-product__button {
-  padding: 6px 109px;
+  @media (min-width: $tablet-width) {
+    margin: 0 0 87px;
+
+    font-size: 16px;
+    line-height: 18px;
+  }
 }
