--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -21,16 +21,22 @@
     background-color: $green-400;
 
     @media (min-width: $tablet-width) {
-      padding: 13px 30px;
-      font-size: 20px;
+      padding: 10px 30px;
     }
   }
 
   &--secondary {
+    width: 100%;
+    padding: 7px 25px;
+
     font-size: 16px;
     line-height: 20px;
     color: $grey-700;
 
     background-color: $grey-400;
+
+    @media (min-width: $tablet-width) {
+      padding: 10px 30px;
+    }
   }
 }
