--- a/source/sass/blocks/gift.scss
+++ b/source/sass/blocks/gift.scss
@@ -1,16 +1,57 @@
 .gift {
   width: 280px;
-  min-height: 289px;
+  height: 289px;
+  padding: 65px 60px 36px;
+
+  text-align: center;
 
   background-color: $green-400;
   background-image: url("../img/gift-background-mobile.jpg");
   background-repeat: no-repeat;
   background-position: 0 0;
+
+  @media (min-width: $tablet-width) and (max-width: $tablet-width-only) {
+    align-items: center;
+    width: 708px;
+    height: 200px;
+
+    background-image: url("../img/gift-background-tablet.jpg");
+  }
+
+  @media (min-width: $desktop-width) {
+    width: 245px;
+  }
 }
 
 .gift__text {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 0;
+
   font-size: 16px;
   line-height: 20px;
   font-family: $basic-font;
   color: $white-400;
+
+  &::before {
+    content: "";
+
+    width: 78px;
+    height: 80px;
+    margin: 0 0 48px;
+
+    background-image: url("../img/icon_gift.svg");
+    background-repeat: no-repeat;
+    background-position: 0 0;
+  }
+
+  @media (min-width: $tablet-width) and (max-width: $tablet-width-only) {
+    flex-direction: row;
+
+
+    &::before {
+      margin: 0 165px 0 0;
+    }
+  }
 }
