--- a/source/sass/blocks/main.scss
+++ b/source/sass/blocks/main.scss
@@ -33,7 +33,7 @@
   padding: 27px 0 0;
 
   @media (min-width: $tablet-width) {
-    margin: 0 0 54px;
+    margin: 0 0 84px;
   }
 
   @media (min-width: $desktop-width) {
@@ -57,5 +57,13 @@
     font-size: 20px;
     line-height: 30px;
     margin: 0 0 66px;
+  }
+}
+
+.main__main-products {
+  margin: 0 0 28px;
+
+  @media (min-width: $tablet-width) {
+    margin: 0 0 68px;
   }
 }
